     just the current map-wide ToD lighting (bug #22215).
   * Disabled "alpha thresholding" in the bilinear interpolation algorithm
     used for all sprites and images. (This was introduced as a workaround
     for an old bug.)
   * Add a new bilinear interpolation implementation, which properly performs
     alpha weighting when averaging colors, and rename old one as the legacy
     version.
 * Help browser:
   * Added trait list with links to the help page for unit types
   * Added "Defense Capped" column with notification in the "terrain modifiers table"
     in the unit help page, for when a defense rating is negative. The column is
     only added for units with at least one negative rating, and includes a link to an explanation.
   * Fixed a bug which caused the terrain section topic not to properly generate a list of its contents.
   * Add a new help section to the terrains topic which explains about mixed terrain types.
   * When using the terrain description feature with a mixed terrain type, the game will autogenerate
     a formatted explanation of its best / worst movement / defense properties.
   * Added automatic help entries for all eras, fulfilling Feature Request #22107
   * Fixed in-game help descriptions of default factions, using content from wiki
   * Added automatically generated lists of races and alignments to the descriptions of factions
   * Autogenerated Time of Day Schedule section
   * Unit types that do not include any visible (hide_help=no) variations no
     longer generate topic sections.
 * Language and i18n:
   * Updated translations: Czech, French, Galician, German, Greek, Hungarian,
     Italian, Lithuanian, Portuguese, Russian, Scottish Gaelic, Slovak, Spanish,
     Vietnamese
   * Fixed cmake pot-update target on Debian and other systems that do not use
     bash as the default /bin/sh.
 * Lua API:
   * Upgraded Lua to version 5.2.3.
   * Fix bug #21761: wesnoth.synchronize_choice will now give a warning when