@@ -47,6 +47,7 @@ Version 1.13.0-dev:
 
  * Graphics:
    * Smooth unit movement over terrain with elevation (e.g. keeps/bridges)
+   * Align unit overlays to the sprite rather than the occupied hex.
 
  * Help browser:
    * Autogenerated Time of Day Schedule section
